<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:background="@color/purple"
    tools:context=".ui.UserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/lets_begin"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:gravity="center"
        android:elevation="1dp"
        android:layout_centerInParent="true"
        android:hint="@string/your_name"
        android:textColor="@color/white"
        android:textColorHint="@color/material_dynamic_neutral70"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="120dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:layout_marginBottom="50dp"
        android:text="@string/save"
        android:backgroundTint="@color/light_purple"
        android:elevation="1dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"/>

</RelativeLayout>